# CPP-ProjectTemplate

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: main.cpp
src/include/: foo.cpp  foo.hpp
src/tests/: test_foo.cpp
